force-app/main/default/objects/QuoteLineItem/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <description>Created for the NS/SF integration.</description>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Schedule</valueSetName>
    </valueSet>
</CustomField>