force-app/main/default/objects/QuoteLineItem/fields/Billing_Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Status__c</fullName>
    <label>Billing Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Schedule_Status</valueSetName>
    </valueSet>
</CustomField>