force-app/main/default/objects/QuoteLineItem/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <description>Identifies whether a One-Time or Recurring Charge in Revenue Lifecycle.</description>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Type</valueSetName>
    </valueSet>
</CustomField>