force-app/main/default/objects/QuoteLineItem/fields/Delta_ARR__c.field-meta.xml
<CustomField>
    <fullName>Delta_ARR__c</fullName>
    <label>Delta ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>