force-app/main/default/objects/QuoteLineItem/fields/Detailed_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Line_Description__c</fullName>
    <description>Allows for longer Product descriptions since the standard description field is not editable.</description>
    <label>Detailed Line Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>