force-app/main/default/objects/QuoteLineItem/fields/Flow_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Flow_Error_Message__c</fullName>
    <description>Details why the automation failed to update the record.</description>
    <inlineHelpText>Details why the automation failed to update the record.</inlineHelpText>
    <label>Flow Error Message</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>