force-app/main/default/objects/QuoteLineItem/fields/Hardware_Product__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardware Product?</label>
    <type>Checkbox</type>
</CustomField>