force-app/main/default/objects/QuoteLineItem/fields/Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Renewal_Date__c</fullName>
    <label>Next Renewal Date</label>
    <type>Date</type>
</CustomField>