force-app/main/default/objects/QuoteLineItem/fields/Partner_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Partner_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Subscription?</label>
    <type>Checkbox</type>
</CustomField>