force-app/main/default/objects/QuoteLineItem/fields/Quote_line_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_line_18_digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote line 18 digit ID</label>
    <type>Text</type>
</CustomField>