force-app/main/default/objects/QuoteLineItem/fields/Renewal_Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Amount_ARR__c</fullName>
    <label>Renewal Amount ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>