force-app/main/default/objects/QuoteLineItem/fields/Up_for_Renewal_Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Up_for_Renewal_Amount_ARR__c</fullName>
    <label>Up for Renewal Amount ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>